@@ -11,6 +11,7 @@ Bug fixes:
 - #6804 Synergy loses edition when creating a System scope config
 - #6660 + #6582 Add missing XAtom for utf-8 handling with Xorg
 - #6814 The system asks to save twice. 
+- #6817 Configure requires dns_sd.h for enterprise version
 
 Enhancements:
 - #6750 Integrate SonarCloud for static analysis and test coverage
